# BIoTic

./: README.md  biotic.py  pyproject.toml
biotic/: biotic.py  constants.py
biotic/modules/discovery/: arp_scan.py  devices_info.py  get_vendor.py  zigbee.py
