[tool.poetry]
name = "biotic"
version = "0.1.0"
description = ""
authors = ["Kevin Nordnes <kevinnordnes@proton.me>"]
readme = "README.md"
packages = [{include = "biotic"}]

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
